syntax = "proto3";

package game;

option go_package = "Go/messages";

message PlayerPosition {
  float x = 1;
  float y = 2;
  float z = 3;
  float rx = 4; //각은 오일러로 받도록 하였음
  float ry = 5;
  float rz = 6;
  string player_id = 7;
}

message ChatMessage {
  string sender = 1;
  string content = 2;
}

message LoginMessage {
  string playerId = 1;    
}

message GameMessage {
  oneof message {
    PlayerPosition player_position = 1;
    ChatMessage chat = 2;
    LoginMessage login = 3;
  }
} 